test/files/pos/java-type-import/S.scala
package java_type_import
import a._, b._

object Test { K.testj(); K.testl() }