test/files/neg/bug4537/c.scala
package b
package c

import a._

object Test {
 println(Settings.Y)
}